Replaced calls to Class.newInstance() with Class.getDeclaredConstructor().newInstance() due to deprecation.